[workspace]

[package]
edition = "2021"
name = "runtime"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
kdy1_test_common = {path = "./common/"}
libloading = "0.7.1"
